--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
  <title>HABL-Flappy Bird</title>
+ <link rel="icon" href="/img/bird.png" type="img/x-icon" />
+ <body>
+    <style>
+      body {
+        background-color: rgb(118, 139, 66);
+      }
+    </style>
+  </body>
 </head>
 <body>
 
